Fix link underline to not stretch

--- a/packages/lit-dev-content/site/css/home/6-get-started.css
+++ b/packages/lit-dev-content/site/css/home/6-get-started.css
@@ -17,6 +17,7 @@
   max-width: 18em;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 #getStartedItems > div > h3 {
